[gd_scene load_steps=18 format=4 uid="uid://4ckl75yd31qs"]

[ext_resource type="PackedScene" uid="uid://c8ngimoatu5yt" path="res://die.tscn" id="1_2xkqv"]
[ext_resource type="Script" path="res://main.gd" id="1_rdl5g"]
[ext_resource type="Texture2D" uid="uid://ckgk0nmd1mybm" path="res://assets/dicetray/black.png" id="3_llpxq"]
[ext_resource type="Texture2D" uid="uid://cpbguhdycbvh6" path="res://assets/dicetray/red.png" id="4_xodl8"]
[ext_resource type="Texture2D" uid="uid://dg2146aqrl7t4" path="res://assets/dicetray/redblack.png" id="5_i8c5w"]
[ext_resource type="Texture2D" uid="uid://c14b1g1scc6n" path="res://assets/dicetray/wood.png" id="6_idxo0"]
[ext_resource type="Texture2D" uid="uid://emvyhw643753" path="res://assets/dice1.png" id="7_ttmcs"]
[ext_resource type="Texture2D" uid="uid://d3go8qdyr8858" path="res://assets/dice2.png" id="8_pc6ha"]
[ext_resource type="Texture2D" uid="uid://2nsqmmj6wjtk" path="res://assets/dice3.png" id="9_r7t56"]
[ext_resource type="Texture2D" uid="uid://7ovejt1hjp53" path="res://assets/dice4.png" id="10_fxr1j"]
[ext_resource type="Texture2D" uid="uid://cvgy1gdhf01rv" path="res://assets/dice5.png" id="11_lnoj2"]
[ext_resource type="Texture2D" uid="uid://nfgubf1qakjc" path="res://assets/dice6.png" id="12_8x46v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1grru"]
texture = ExtResource("3_llpxq")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aqmw8"]
texture = ExtResource("4_xodl8")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4l8w8"]
texture = ExtResource("5_i8c5w")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4bcll"]
texture = ExtResource("6_idxo0")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_5v7kl"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_1grru")
sources/1 = SubResource("TileSetAtlasSource_aqmw8")
sources/2 = SubResource("TileSetAtlasSource_4l8w8")
sources/3 = SubResource("TileSetAtlasSource_4bcll")

[node name="Main" type="Node"]
script = ExtResource("1_rdl5g")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAkAAwAAAAAAAAAAAAgAAwAAAAAAAAAAAAcAAwAAAAAAAAAAAAYAAwAAAAAAAAAAAAUAAwAAAAAAAAAAAAQAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAAIAAwAAAAAAAAAAAAEAAwAAAAAAAAAAAAAAAwAAAAAAAAABAAAAAwAAAAAAAAADAAAAAwAAAAAAAAACAAAAAwAAAAAAAAAEAAAAAwAAAAAAAAAFAAAAAwAAAAAAAAAGAAAAAwAAAAAAAAAGAAkAAwAAAAAAAAAFAAkAAwAAAAAAAAAEAAkAAwAAAAAAAAADAAkAAwAAAAAAAAACAAkAAwAAAAAAAAABAAkAAwAAAAAAAAADAAgAAgAAAAAAAAADAAcAAgAAAAAAAAADAAYAAgAAAAAAAAADAAUAAgAAAAAAAAADAAQAAgAAAAAAAAADAAMAAgAAAAAAAAADAAIAAgAAAAAAAAADAAEAAgAAAAAAAAACAAgAAQAAAAAAAAACAAcAAQAAAAAAAAABAAgAAgAAAAAAADABAAcAAgAAAAAAADABAAYAAgAAAAAAADABAAUAAgAAAAAAADABAAQAAgAAAAAAADABAAMAAgAAAAAAADABAAIAAgAAAAAAADABAAEAAgAAAAAAADACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAgAAAAAAADAGAAIAAgAAAAAAADAGAAMAAgAAAAAAADAGAAQAAgAAAAAAADAGAAUAAgAAAAAAADAGAAYAAgAAAAAAADAGAAcAAgAAAAAAADAGAAgAAgAAAAAAADAHAAgAAQAAAAAAAAAIAAgAAgAAAAAAAAAHAAcAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAUAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAcAAgAAAAAAAAAHAAkAAwAAAAAAAAAIAAkAAwAAAAAAAAAJAAkAAwAAAAAAAAAJAAgAAwAAAAAAAAAJAAcAAwAAAAAAAAAJAAYAAwAAAAAAAAAJAAUAAwAAAAAAAAAJAAQAAwAAAAAAAAAJAAMAAwAAAAAAAAAJAAIAAwAAAAAAAAAJAAEAAwAAAAAAAAAJAAAAAwAAAAAAAAAIAAAAAwAAAAAAAAAHAAAAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_5v7kl")

[node name="die" parent="." instance=ExtResource("1_2xkqv")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(100, 100)

[node name="DieFace1" type="Sprite2D" parent="."]
position = Vector2(692, 48)
scale = Vector2(3, 3)
texture = ExtResource("7_ttmcs")

[node name="DieFace2" type="Sprite2D" parent="."]
position = Vector2(692, 147)
scale = Vector2(3, 3)
texture = ExtResource("8_pc6ha")

[node name="DieFace3" type="Sprite2D" parent="."]
position = Vector2(692, 244)
scale = Vector2(3, 3)
texture = ExtResource("9_r7t56")

[node name="DieFace4" type="Sprite2D" parent="."]
position = Vector2(691, 341)
scale = Vector2(3, 3)
texture = ExtResource("10_fxr1j")

[node name="DieFace5" type="Sprite2D" parent="."]
position = Vector2(691, 439)
scale = Vector2(3, 3)
texture = ExtResource("11_lnoj2")

[node name="DieFace6" type="Sprite2D" parent="."]
position = Vector2(691, 537)
scale = Vector2(3, 3)
texture = ExtResource("12_8x46v")
